--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8"/>
     <title>Run Buddy</title>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
   </head>
   <body>
     <!--navigation bar-->
     <header>
-      <h1>RUN BUDDY</h1>
+      <h1>
+        <!--The "/" will always represent the path to the topmost directory-->
+        <a href="/">RUN BUDDY</a>
+      </h1>
       <nav>
         <!--Unordered List element-->
         <ul>
@@ -27,7 +31,7 @@
           </li>
         </ul>
       </nav>
-    </header>
+    </header> 
     
     <!--hero/jumbotron-->
     <section></section>
