CSS for What We Do section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <!--End of Hero/Jumbotron-->
     
     <!--"what we do" section-->
-    <section id="what-we-do">
+    <section id="what-we-do" class="intro">
       <img src="./assets/images/01-04-svgs/step-1.svg" alt="">
       <h2>What We Do</h2>
       <p>
