--- a/index.html
+++ b/index.html
@@ -146,22 +146,21 @@
       </article>
     </section>
      
-    <!--"reach out" section-->
-    <section id="reach-out">
-      <h2>Reach Out</h2>
+    <!--"reach out/contact" section-->
+    <section id="reach-out" class="contact-section">
+      <h2 class="section-title secondary-border">Reach Out</h2>
 
       <div class="contact-info"> <!--iframe auto populated from google-->
-        
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3220.4452902486332!2d-86.74329568430844!3d36.18005091005968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8864687f5b02fae7%3A0xc24cd0922c8a8a07!2s403%20N%2016th%20St%2C%20Nashville%2C%20TN%2037206!5e0!3m2!1sen!2sus!4v1612651194012!5m2!1sen!2sus" 
-        width="400" 
-        height="400" 
-        frameborder="0" 
-        style="border:0;" 
-        allowfullscreen="" 
-        aria-hidden="false" 
-        tabindex="0">
+        <div>
+          <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3220.4452902486332!2d-86.74329568430844!3d36.18005091005968!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8864687f5b02fae7%3A0xc24cd0922c8a8a07!2s403%20N%2016th%20St%2C%20Nashville%2C%20TN%2037206!5e0!3m2!1sen!2sus!4v1612651194012!5m2!1sen!2sus" 
+          frameborder="0" 
+          style="border:0;" 
+          allowfullscreen="" 
+          aria-hidden="false" 
+          tabindex="0">
           " frameborder="0">
         </iframe>
+      </div>
         <div>
           <h3>Run Buddy</h3>
           <p>Any questions of concerns before signing up? <br/>
