finished secondary css stlye for privacy policy and fixed some organizational mistakes

--- a/index.html
+++ b/index.html
@@ -3,16 +3,17 @@
   
 <head>
     <meta charset="UTF-8"/>
-    <title>Run Buddy</title>
+    <title><a href="#run-buddy-home">Run Buddy</a></title>
     <link rel="stylesheet" href="./assets/css/style.css"/>
-  </head>
+</head>
   
   <body>
     <!--navigation bar-->
     <header>
       <h1>
         <!--The "/" will always represent the path to the topmost directory-->
-        <a href="/">
+        <!--The link "/" was taking me to actual files, so I linked it to the title of the page with "#run-buddy-home"-->
+        <a href="#run-buddy-home">
           RUN BUDDY
         </a>
       </h1>
@@ -180,7 +181,7 @@
     <footer>
       <h2>&hearts; Made with love by Run Buddy.</h2>
       <div>
-        <a href="#">Read Our Privacy Policy</a><br/>
+        <a href="./privacy-policy.html">Read Our Privacy Policy</a><br/>
         &copy; 2019 Run Buddy, Inc.
       </div>
     </footer>
