--- a/index.html
+++ b/index.html
@@ -7,43 +7,46 @@
     <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
   
-  <body>
-    <!--navigation bar-->
-    <header>
-      <h1>
-        <!--The "/" will always represent the path to the topmost directory-->
-        <!--The link "/" was taking me to actual files, so I linked it to the title of the page with "#run-buddy-home"-->
-        <a href="#run-buddy-home">
-          RUN BUDDY
-        </a>
-      </h1>
-      <nav>
-        <!--Unordered List element-->
-        <ul>
-          <!--List item element-->
-          <li>
-            <!--Anchor element-->
-            <a href="#what-we-do">What We Do</a>
-          </li>
-          <li>
-            <a href="#what-you-do">What You Do</a>
-          </li>
-          <li>
-            <a href="#your-trainers">Your Trainers</a>
-          </li>
-          <li>
-            <a href="#reach-out">Reach Out</a>
-          </li>
-        </ul>
-      </nav>
-    </header> 
+<body>
+  <!--navigation bar-->
+  <header>
+    <h1>
+      <!--The "/" will always represent the path to the topmost directory-->
+      <!--The link "/" was taking me to actual files, so I linked it to the title of the page with "#run-buddy-home"-->
+      <a href="#run-buddy-home">
+        RUN BUDDY
+      </a>
+    </h1>
+
+    <nav>
+      <!--Unordered List element-->
+      <ul>
+        <!--List item element-->
+        <li>
+        <!--Anchor element-->
+          <a href="#what-we-do">What We Do</a>
+        </li>
+        <li>
+          <a href="#what-you-do">What You Do</a>
+        </li>
+        <li>
+          <a href="#your-trainers">Your Trainers</a>
+        </li>
+        <li>
+          <a href="#reach-out">Reach Out</a>
+        </li>
+      </ul>
+    </nav>
+  </header> 
     
-    <!--hero/jumbotron-->
-    <section class="hero">
-      <div class="hero-form">
-        <!--Using h3 because h2 is in the <footer> and h3 is less significant-->
-        <h3>Get Started Today</h3>
-        <p>Fill out this form and one of our trainers will schedule a consult</p>
+  <!--hero/jumbotron-->
+  <section class="hero">
+    <!--Form-->
+    <div class="hero-form">
+      <!--Using h3 because h2 is in the <footer> and h3 is less significant-->
+      <h3>Get Started Today</h3>
+
+      <p>Fill out this form and one of our trainers will schedule a consult</p>
         <form>
           <label for="name">Enter full name:</label>
           <input type="text" placeholder="Your Name" name="name" id="name" class="form-input"/>
@@ -53,6 +56,7 @@
 
           <label for="phone">Enter a telephone number:</label>
           <input type="tel" placeholder="Phone Number" name="phone" id="phone" class="form-input"/>
+
           <p>
             Have you worked out with a trainer before?
             <input type="radio" name="trainer-confirm" id="trainer-yes"/>
@@ -61,15 +65,18 @@
             <input type="radio" name="trainer-confirm" id="trainer-no"/>
             <label for="trainer-no">No</label>
           </p>
+
           <p>
             <label for="checkbox">
               I acknowledge that I am at least 18 years of age
             </label>
             <input type="checkbox" name="age-confirm" id="checkbox">  
           </p>
+
           <button type="submit">
             Get Running!
           </button>
+
         </form>
       </div>
     </section>
@@ -77,6 +84,7 @@
     
     <!--"what we do" section-->
     <section id="what-we-do" class="intro">
+
       <h2 class="section-title primary-border">What We Do</h2>
       <p>
         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Libero, quod ducimus! Mollitia eligendi deserunt ipsam illo dicta laboriosam obcaecati veritatis, in vero, ducimus deleniti magni vitae aspernatur quia omnis? Aspernatur.
@@ -160,8 +168,9 @@
           aria-hidden="false" 
           tabindex="0">
           " frameborder="0">
-        </iframe>
-      </div>
+          </iframe>
+        </div>
+
         <div>
           <h3>Run Buddy</h3>
           <p>Any questions of concerns before signing up? <br/>
@@ -174,16 +183,20 @@
             P: 555.RUN.BUDZ (555.786.2839)<br/>
             E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
           </address>
-        </div>
+        </div> 
       </div>
     </section>
+    <!--End of "reach out/contact" section-->
+
 
     <footer>
       <h2>&hearts; Made with love by Run Buddy.</h2>
+
       <div>
         <a href="./privacy-policy.html">Read Our Privacy Policy</a><br/>
         &copy; 2019 Run Buddy, Inc.
       </div>
+
     </footer>
   </body>
 </html>
