new <div> in hero <section> added flipped image to assests file

--- a/index.html
+++ b/index.html
@@ -41,6 +41,13 @@
     
   <!--hero/jumbotron-->
   <section class="hero">
+
+    <div class="hero-cta">
+      <h2>Start Building Habits</h2>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda id explicabo atque non quidem quis, quasi impedit dignissimos corporis? Omnis, cupiditate qui. Accusamus rerum distinctio et error reiciendis possimus cumque.
+      </p>
+    </div>
     <!--Form-->
     <div class="hero-form">
       <!--Using h3 because h2 is in the <footer> and h3 is less significant-->
