flipped image for hero, new div

--- a/index.html
+++ b/index.html
@@ -41,6 +41,14 @@
     
   <!--hero/jumbotron-->
   <section class="hero">
+
+    <div class="hero-cta">
+      <h2>Start Building Habits.</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Obcaecati iure in provident aliquam rem aspernatur eum saepe quod cupiditate laboriosam quae numquam, quidem autem earum laudantium eveniet, placeat fugiat! Ullam!Lorem
+      </p>
+    </div>
+
     <!--Form-->
     <div class="hero-form">
       <!--Using h3 because h2 is in the <footer> and h3 is less significant-->
