--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 <head>
     <meta charset="UTF-8"/>
-    <title><a href="#run-buddy-home">Run Buddy</a></title>
+    <title>Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
   
