feature/contact form html

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 <head>
     <meta charset="UTF-8"/>
-    <title><a href="#run-buddy-home">Run Buddy</a></title>
+    <title>Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
   
@@ -42,6 +42,7 @@
   <!--hero/jumbotron-->
   <section class="hero">
 
+    <!--New Hero section with flipped bg image-->
     <div class="hero-cta">
       <h2>Start Building Habits.</h2>
       <p>
@@ -177,6 +178,21 @@
           tabindex="0">
           " frameborder="0">
           </iframe>
+        </div>
+
+        <!--New contact-form-->
+        <div class="contact-form">
+          <h3>Contact Us</h3>
+          <form>
+
+            <label for="contact-name">Your Name</label>
+            <input type="text" id="contact-name" placeholder="Your Name">
+
+            <label for="contact-message">Message</label>
+            <textarea id="contact-message" placeholder="Message"></textarea>
+
+            <button type="submit">Submit</button>
+          </form>
         </div>
 
         <div>
