--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   
 <head>
     <meta charset="UTF-8"/>
-    <title><a href="#run-buddy-home">Run Buddy</a></title>
+    <title>Run Buddy</title>
     <link rel="stylesheet" href="./assets/css/style.css"/>
 </head>
   
@@ -42,12 +42,6 @@
   <!--hero/jumbotron-->
   <section class="hero">
 
-    <div class="hero-cta">
-      <h2>Start Building Habits</h2>
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda id explicabo atque non quidem quis, quasi impedit dignissimos corporis? Omnis, cupiditate qui. Accusamus rerum distinctio et error reiciendis possimus cumque.
-      </p>
-    </div>
     <!--Form-->
     <div class="hero-form">
       <!--Using h3 because h2 is in the <footer> and h3 is less significant-->
